--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Erin and Ben's wedding landing page</title>
 
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -48,10 +48,6 @@
     </main>
     <div class="right">
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="/js/prism.js"></script>
-    <script src="/js/bgcolor.js"></script>
 </body>
 
 </html>
