--- a/index.html
+++ b/index.html
@@ -28,18 +28,27 @@
             <h3>October 3, 2020</h3>
             <h3>Kaneohe, Hawaii</h3>
             <hr>
-            Welcome! Due to the evolving Coronavirus situation, we created this landing page to collect email
-            information in case we need to send any timely updates to you.
-            <h3><a href="https://www.weddingwire.us/website/benerin2020/welcome-1">Continue to our Wedding Site</a></h3>
-            <h3><a href="https://www.weddingwire.us/website/benerin2020/welcome-1">See this page for our latest
-                    updates</a></h3>
-            Please enter your email below if you would like to recieve any important updates.
+            Welcome! We are currently hoping and planning to safely hold our wedding, as scheduled, on October 3, 2020.
+            But amid the current Coronavirus situation, we intend on prioritizing the health and well-being of our
+            family and friends over our celebration, if necessary.
+            <br><br>
+            We have added this landing page to collect your email address if you would like to recieve timely updates
+            from us in the event where plans must be changed. We will also continue updating the wedding site and this
+            page with any information.
+            <h3><a href="https://www.weddingwire.us/website/benerin2020/welcome-1">Continue to our wedding homepage</a></h3>
+            <h3><a href="https://www.weddingwire.us/website/benerin2020/travel-14">See our travel recommendations here</a></h3>
+            Please enter submit your email below if you would like to recieve any important updates.
         </article>
 
         <article>
-            <iframe
-                src="https://docs.google.com/forms/d/e/1FAIpQLSdsx2D4Bhngv86a_AoVX-29Wg0npOvAT8q3NNG2rkJVyBbXZA/viewform?embedded=true"
-                width="100%" height="750px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdsx2D4Bhngv86a_AoVX-29Wg0npOvAT8q3NNG2rkJVyBbXZA/viewform?embedded=true" width="100%" height="750px" frameborder="0" marginheight="0"
+                marginwidth="0">Loading…</iframe>
+        </article>
+
+        <article>
+            <hr>
+            <h4>Latest Updates</h4>
+            3/14/20 - Added this landing page.
         </article>
 
         <article>
