--- a/index.html
+++ b/index.html
@@ -27,17 +27,14 @@
             <h3>Erin Sanehira and Ben Hopkins are getting Married!</h3>
             <h3>October 3, 2020</h3>
             <h3>Kaneohe, Hawaii</h3>
+            <h3><a href="https://www.weddingwire.us/website/benerin2020/welcome-1">Continue to our wedding homepage</a></h3>
             <hr>
             Welcome! We are currently hoping and planning to safely hold our wedding, as scheduled, on October 3, 2020.
             But amid the current Coronavirus situation, we intend on prioritizing the health and well-being of our
             family and friends over our celebration, if necessary.
-            <br><br>
-            We have added this landing page to collect your email address if you would like to recieve timely updates
-            from us in the event where plans must be changed. We will also continue updating the wedding site and this
-            page with any information.
-            <h3><a href="https://www.weddingwire.us/website/benerin2020/welcome-1">Continue to our wedding homepage</a></h3>
             <h3><a href="https://www.weddingwire.us/website/benerin2020/travel-14">See our travel recommendations here</a></h3>
-            Please enter submit your email below if you would like to recieve any important updates.
+            Please submit your email below if you would like to recieve any important updates.
+            We will also continue updating the wedding site with any information.
         </article>
 
         <article>
@@ -46,9 +43,7 @@
         </article>
 
         <article>
-            <hr>
-            <h4>Latest Updates</h4>
-            3/14/20 - Added this landing page.
+            <h3><a href="https://www.weddingwire.us/website/benerin2020/welcome-1">Continue to our wedding homepage</a></h3>
         </article>
 
         <article>
