--- a/index.html
+++ b/index.html
@@ -24,26 +24,27 @@
 
         <article>
             <hr>
+            <div>
+                <h1 id="postponed">POSTPONED</h1>
+            </div>
             <h3>Erin Sanehira and Ben Hopkins are getting Married!</h3>
             <h3>October 3, 2020</h3>
             <h3>Kaneohe, Hawaii</h3>
-            <h3><a href="https://www.weddingwire.us/website/benerin2020/welcome-1">Continue to our wedding homepage</a></h3>
+            <!-- <h3><a href="https://www.weddingwire.us/website/benerin2020/welcome-1">Continue to our wedding homepage</a></h3> -->
             <hr>
-            Welcome! We are currently hoping and planning to safely hold our wedding, as scheduled, on October 3, 2020.
-            But amid the current Coronavirus situation, we intend on prioritizing the health and well-being of our
-            family and friends over our celebration, if necessary.
-            <h3><a href="https://www.weddingwire.us/website/benerin2020/travel-14">See our travel recommendations here</a></h3>
-            Please submit your email below if you would like to recieve any important updates.
-            We will also continue updating the wedding site with any information.
+
+            Hello, we hope you are well. Unfortunately, we have decided to postpone our wedding to ensure everyone's health and saftey. We're sorry for any inconvenience this may cause. We're planning
+            to wait some time before deciding on a new date. Thank you so much for your understanding! ❤️
+
         </article>
 
-        <article>
+        <!-- <article>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdsx2D4Bhngv86a_AoVX-29Wg0npOvAT8q3NNG2rkJVyBbXZA/viewform?embedded=true" width="100%" height="750px" frameborder="0" marginheight="0"
                 marginwidth="0">Loading…</iframe>
-        </article>
+        </article> -->
 
         <article>
-            <h3><a href="https://www.weddingwire.us/website/benerin2020/welcome-1">Continue to our wedding homepage</a></h3>
+            <h3><a href="https://www.weddingwire.us/website/benerin2020/welcome-1">Photos and Contact are still available on our website.</a></h3>
         </article>
 
         <article>
