fix transform to work on more browsers + strikethrough text

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <div>
                 <h1 id="postponed">POSTPONED</h1>
             </div>
-            <h3>Erin Sanehira and Ben Hopkins are getting Married!</h3>
-            <h3>October 3, 2020</h3>
-            <h3>Kaneohe, Hawaii</h3>
+            <h3 id="strike">Erin Sanehira and Ben Hopkins are getting Married!</h3>
+            <h3 id="strike">October 3, 2020</h3>
+            <h3 id="strike">Kaneohe, Hawaii</h3>
             <!-- <h3><a href="https://www.weddingwire.us/website/benerin2020/welcome-1">Continue to our wedding homepage</a></h3> -->
             <hr>
 
